[package]
name = "survey-info"
version = "0.1.0"
edition = "2021"
build =  "build.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = { version = "^1.4", features = ["fltk-bundled"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
rust-crypto = { version = "0.2.36" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


[build-dependencies]
embed-resource =  "1.7.2"
